Merged tests step 6